# example-standalone-inferencing-zephyr-module

./: .gitignore  CMakeLists.txt  README.md  README.rst  prj.conf  sample.yaml  west.yml
model/: CMakeLists.txt  README.md  readme.txt
model/model-parameters/: model_metadata.h  model_variables.h
model/tflite-model/: tflite_learn_34_3_compiled.cpp  tflite_learn_34_3_compiled.h
src/: main.cpp
